# DiffTetVR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-msvc.bat  build.sh  setup.py  shell.nix  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-msys2.yml  build-pip.yml  build-ubuntu.yml  build-vcpkg.yml
Data/Shaders/: ForwardCommon.glsl
Data/Shaders/Common/: BackwardCommon.glsl  BarycentricInterpolation.glsl  ClipPlane.glsl  ForwardCommon.glsl  RayCommon.glsl  TetFaceTable.glsl
Data/Shaders/Grid/: RegularGridDVR.glsl  TransferFunction.glsl
Data/Shaders/Intersect/: AdjointIntersectRasterization.glsl  GenerateTrianglesIntersect.glsl  IntersectRasterization.glsl  IntersectUniform.glsl  RayIntersectionTests.glsl
Data/Shaders/Optimizer/: Loss.glsl  Optimizer.glsl  TetRegularizer.glsl
Data/Shaders/PPLL/: Backward.glsl  Forward.glsl  LinkedListBackward.glsl  LinkedListClear.glsl  LinkedListGather.glsl  LinkedListHeader.glsl  LinkedListResolve.glsl  LinkedListSort.glsl  LinkedListUniform.glsl
Data/Shaders/Projection/: AdjointGenerateTrianglesVTK.glsl  AdjointProjectedRasterization.glsl  CompactTriangleTetList.glsl  ComputeTriangleDepths.glsl  GenerateTriangles.glsl  GenerateTrianglesVTK.glsl  InitializeIndirectCommandBuffer.glsl  InitializeIndirectCommandBufferAdjoint.glsl  ProjectedRasterization.glsl  ProjectionUniform.glsl
Data/Shaders/Utils/: Lighting.glsl
Data/TransferFunctions/: Grey.xml  Grey2.xml  README.md  Tooth1.xml  Tooth3Gauss.xml  Tooth3Linear.xml
docs/license-executables/: LICENSE-ftetwild.txt  LICENSE-tetgen.txt
docs/license-libraries/: README.txt  TODO.txt
docs/license-libraries/graphics/: LICENSE-openvolumemesh.txt
pytests/: eval.py  eval_synth.py  imgutils.py  pyutils.py  render.py  render_vpt.py  run.py  test_opt.py  train.py  tri_mesh_ppll.py
pytests/datasets/: actions.py  camera_sample_method.py  colmap_dataset.py  dataset.py  images_dataset.py  imgutils.py  nerf_synthetic_dataset.py  paths.py  regular_grid_dataset.py  sample_view.py  tet_mesh_dataset.py  vpt_dataset.py
pytests/datasets/colmap/: colmap_align_axes.py
pytests/datasets/synthetic/: aabb_colmap.py  aabb_depth.py  aabb_voxel_carving.py  synthetic_compute_aabb.py
pytests/utils/: fetch_submodules.py  synthetic_compute_aabb.py
scripts/: similarity.py
src/Frontend/: DataView.cpp  DataView.hpp  Main.cpp  MainApp.cpp  MainApp.hpp  SceneData.hpp
src/Module/: Module.cpp  difftetvr.pyi  pyutils.py
src/Module/VoxelCarving/: DenseVoxelCarvingCPU.cpp  DenseVoxelCarvingCPU.hpp  VoxelCarving.cpp  VoxelCarving.hpp
src/Renderer/: DepthComplexityRenderer.cpp  LossPass.cpp  LossPass.hpp  Optimizer.cpp  Optimizer.hpp  OptimizerDefines.hpp  OptimizerPass.cpp  OptimizerPass.hpp  RadixSortHelper.cpp  RadixSortHelper.hpp  RasterCommon.cpp  RasterCommon.hpp  RegularGridRendererDVR.cpp  RegularGridRendererDVR.hpp  TetMeshRendererIntersection.cpp  TetMeshRendererIntersection.hpp  TetMeshRendererPPLL.cpp  TetMeshRendererPPLL.hpp  TetMeshRendererProjection.cpp  TetMeshRendererProjection.hpp  TetMeshRendererType.hpp  TetMeshVolumeRenderer.cpp  TetMeshVolumeRenderer.hpp  TetRegularizerPass.cpp  TetRegularizerPass.hpp
src/Tet/: ColorStorage.hpp  DeviceObject.cpp  DeviceObject.hpp  RegularGrid.cpp  RegularGrid.hpp  TetMesh.cpp  TetMesh.hpp  TetQuality.hpp  TetQualityFunctions.hpp
src/Tet/CSP/: FlipSolver.cpp
src/Tet/Loaders/: BinTetLoader.cpp  BinTetLoader.hpp  DataSetList.cpp  DataSetList.hpp  LoadersUtil.cpp  LoadersUtil.hpp  MeshLoader.cpp  MeshLoader.hpp  MshLoader.cpp  MshLoader.hpp  OvmLoader.cpp  OvmLoader.hpp  TetMeshLoader.hpp  TxtTetLoader.cpp  TxtTetLoader.hpp
src/Tet/Meshing/: TetMeshing.cpp  TetMeshing.hpp  WriteSurfaceMesh.cpp  WriteSurfaceMesh.hpp  fTetWildWrapper.cpp  fTetWildWrapper.hpp
src/Tet/RegularGridLoaders/: DatRawFileLoader.cpp  DatRawFileLoader.hpp  HostCacheEntry.hpp  RegularGridLoader.hpp
src/Tet/Writers/: VtkWriter.cpp  VtkWriter.hpp
